--- a/20160814_html_css/profile_page/index.html
+++ b/20160814_html_css/profile_page/index.html
@@ -5,7 +5,7 @@
 		<title>Justin Hsiao</title>
 		<link href='https://fonts.googleapis.com/css?family=Dancing+Script:700,400' rel='stylesheet' type='text/css'>
 
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<div class="main">
@@ -15,13 +15,13 @@
 
 			<p class="summary">Junior Web Developer &amp; Data Scientist with a Physics degree and computer programming skills. Adroit at Python, Java, data mining, problem solving and project management. Self-starter with extended start-up experience working with an international cohort.</p>
 
-			<a dadsf="https://www.facebook.com/justin.hsiao.56"><img class="social-icon" src="square-facebook.png"></a>
+			<a dadsf="https://www.facebook.com/justin.hsiao.56"><img class="social-icon" src="img/square-facebook.png"></a>
 
-			<a dadsf=""><img class="social-icon" src="square-google-plus.png" alt=""></a>
+			<a dadsf=""><img class="social-icon" src="img/square-google-plus.png" alt=""></a>
 
-			<a dadsf=""><img class="social-icon" src="square-linkedin.png" alt=""></a>
+			<a dadsf=""><img class="social-icon" src="img/square-linkedin.png" alt=""></a>
 
-			<a dadsf=""><img class="social-icon" src="square-twitter.png" alt=""></a>
+			<a dadsf=""><img class="social-icon" src="img/square-twitter.png" alt=""></a>
 		</div>
 
 	</body>
