--- a/20160814_html_css/fake_google/google.html
+++ b/20160814_html_css/fake_google/google.html
@@ -5,6 +5,41 @@
 	<title>Fake Google</title>
 </head>
 <body>
-	
+	<nav>
+		<ul>
+			<li>navitem</li>
+			<li>navitem</li>
+			<li>navitem</li>
+			<li>navitem</li>
+			<li>navitem</li>
+		</ul>
+	</nav>
+	<div id="main">
+		<img src="">
+		<div>
+			<input type="text" name="">
+			<img src="">
+		</div>
+		<div>
+			<span>Google Search</span>
+			<span>I'm Feeling Lucky</span>
+		</div>
+		<div>
+			<span>Google.com.tw offered in: </span>
+			<a href="">中文（繁體）</a>
+		</div>
+	</div>
+	<footer>
+		<ul>
+			<li>footeritem left</li>
+			<li>footeritem left</li>
+			<li>footeritem left</li>
+		</ul>
+		<ul>
+			<li>footeritem right</li>
+			<li>footeritem right</li>
+			<li>footeritem right</li>
+		</ul>
+	</footer>
 </body>
 </html>
