float nav to right

--- a/20160814_html_css/fake_google/google.html
+++ b/20160814_html_css/fake_google/google.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Fake Google</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<nav>
-		<ul>
+		<ul class="right">
 			<li>navitem</li>
 			<li>navitem</li>
 			<li>navitem</li>
