upload practice files

--- a/20160820_rwd_bootstrap/airbnb_responsive_practice/index.html
+++ b/20160820_rwd_bootstrap/airbnb_responsive_practice/index.html
@@ -56,17 +56,17 @@
 	</section>
 
 	<!-- Bootstrap section for cities -->
-	<!-- <section class="bootstrap-cities container">
+	<section class="bootstrap-cities container">
 		<h2>Just for the weekend</h2>
 		<p>Discover new, inspiring places close to home.</p>
 		<div class="row">
-			<div class="b-city-border">
+			<div class="b-city-border col-md-4 col-sm-12">
 				<div class="b-city seoul"><p>Seoul</p></div>
 			</div>
-			<div class="b-city-border">
+			<div class="b-city-border col-md-4 col-sm-6">
 				<div class="b-city osaka"><p>Osaka</p></div>
 			</div>
-			<div class="b-city-border">
+			<div class="b-city-border col-md-4 col-sm-6">
 				<div class="b-city kyoto"><p>Kyoto</p></div>
 			</div>
 		</div>
@@ -74,7 +74,7 @@
 			<button class="dst">See All Destinations</button>
 		</div>
 		
-	</section> -->
+	</section>
 
 </body>
 </html>
